--- a/config-prod.yml
+++ b/config-prod.yml
@@ -1,2 +1,2 @@
 config:
-  info: "master brach,springcloud-config/config.prod.yml version=1"
+  info: "master brach,springcloud-config/config-prod.yml version=1"
